workloads/flask/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: azure-app-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sampleflask
  template:
    metadata:
      labels:
        app: sampleflask
    spec:
      containers:
      - name: azure-app-deployment
        image: acraksf7qlptmhmwvmc.azurecr.io/flask:0.1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 2000
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 256Mi       
---
apiVersion: v1
kind: Service
metadata:
  name: flask-service
spec:
  type: ClusterIP
  selector:
    app: flask
  ports:
  - port: 2000
    targetPort: 2000
